--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </head>
 <body>
   <div class="container">
-    <h1><3</h1>
+    <h1>The Crystalline Wilds</h1>
     <p>@-->--</p>
 
     <!-- Replace these src values with your actual image URLs or paths -->
