--- a/index.html
+++ b/index.html
@@ -2,48 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Simple Page</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    body {
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      background: #111827;
-      color: #e5e7eb;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      min-height: 100vh;
-      margin: 0;
-      text-align: center;
-    }
-    .container {
-      max-width: 600px;
-      padding: 1.5rem;
-    }
-    img {
-      max-width: 100%;
-      height: auto;
-      border-radius: 8px;
-      margin: 0.75rem 0;
-    }
-    h1 {
-      margin-bottom: 0.75rem;
-    }
-    p {
-      margin-top: 0.25rem;
-      color: #9ca3af;
-    }
-  </style>
+  <title>The Crystalline Wilds</title>
 </head>
 <body>
-  <div class="container">
-    <h1>The Crystalline Wilds</h1>
-    <p>@-->--</p>
 
-    <!-- Replace these src values with your actual image URLs or paths -->
-    <img src="images/image1.png" alt="First image">
-    <img src="images/image2.jpg" alt="Second image">
-  </div>
+  <h1>The Crystalline Wilds</h1>
+
+  <h2><3 <3 <3 </h2>
+
+    <img src="images/image1.png" alt="First image" width="300">
+    <img src="images/image2.jpg" alt="Second image" width="300">
+
 </body>
 </html>
